# Carrot

./: CLAUDE.md  Cargo.toml  index.html  plan.md  proxy_server.py  test_proxy.py
corpus/: html_noise.txt  measurements.txt  metadata_noise.txt  navigation_noise.txt  verbs.txt
scripts/: run.sh
src/: html_parser.rs  lib.rs
src/carrot_frontend/: wasm.rs
test/: README.md  test_cases.toml  test_integration.sh
tests/: integration_test.rs
tests/integration/: mod.rs
