[package]
name = "carrot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "carrot-cli"
path = "src/bin/cli.rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
html2text = "0.12"
regex = "1.0"
js-sys = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
