[package]
name = "carrot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "carrot-cli"
path = "src/bin/cli.rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
regex = "1.0"
js-sys = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.0", features = ["derive"] }
dom_smoothie = { version = "0.11.1", default-features = false, features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
fantoccini = "0.19"
toml = "0.8"
similar = "2.2"
